# Ilov3Splat

./: .gitignore  README.md  index.html  pyproject.toml
ilov3splat/: __init__.py  ilov3splat_config.py  ilov3splat_datamanager.py  ilov3splat_model.py  ilov3splat_pipeline.py  viewer_controls.py
ilov3splat/cluster/: __init__.py  hdbscan.py
ilov3splat/eval/: cluster_gaussians.py  eval_lerf_ovs.py  hybrid_language_query.py  metrics.py  query_core.py  utils.py  viz_lerf_ovs.py
ilov3splat/fields/: __init__.py  clip_field.py
ilov3splat/losses/: __init__.py  instance2d.py
ilov3splat/preprocess/: __init__.py  extract_sam_masks.py  sam_levels_model.py
ilov3splat/utils/: dino_dataloader.py  feature_dataloader.py  image_encoder.py  instance_label_utils.py  openclip_encoder.py  patch_embedding_dataloader.py  pyramid_embedding_dataloader.py
static/css/: index.css
