[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ilov3splat"
description = "Ilov3Splat: Instance-level open-vocabulary Gaussian Splatting plugin for Nerfstudio."
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    # --- Nerfstudio / splats ---
    "nerfstudio>=1.1.0",
    "gsplat>=1.0.0",
    # --- PyTorch stack ---
    "torch>=2.0",
    "torchvision>=0.15",
    # --- Numerics & data I/O ---
    "numpy>=1.24",
    "opencv-python>=4.11.0.86",
    "omegaconf>=2.3.0",
    "tqdm>=4.67.1",
    "imageio>=2.37.0",
    "Pillow>=9.0",
    "scikit-learn>=1.6.1",
    "open3d>=0.19.0",
    "plyfile>=1.1",
    "pyyaml>=6.0",
    # --- GPU clustering (CPU fallback: hdbscan + scikit-learn above) ---
    "cuml-cu12==25.4.*",
    "hdbscan>=0.8.33",
    # --- Language / CLIP field ---
    "open-clip-torch>=2.24.0",
    "tinycudann>=1.7",
]

[project.optional-dependencies]
preprocess-sam = [
    "segment-anything @ git+https://github.com/facebookresearch/segment-anything.git",
]
eval = [
    "tabulate>=0.9.0",
]
# Convenience bundle for SAM preprocessing and LERF-OVS evaluation.
all = [
    "segment-anything @ git+https://github.com/facebookresearch/segment-anything.git",
    "tabulate>=0.9.0",
]

[project.scripts]
ilov3splat-cluster-gaussians = "ilov3splat.eval.cluster_gaussians:main"
ilov3splat-extract-sam-masks = "ilov3splat.preprocess.extract_sam_masks:main"
ilov3splat-eval-lerf-ovs = "ilov3splat.eval.eval_lerf_ovs:main"
ilov3splat-viz-lerf-ovs = "ilov3splat.eval.viz_lerf_ovs:main"

[project.entry-points.'nerfstudio.method_configs']
ilov3splat = "ilov3splat.ilov3splat_config:ilov3splat_method"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["ilov3splat*"]
